--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "formik": "^1.4.1",
-    "gatsby": "^2.17.7",
+    "gatsby": "^2.18.4",
+    "graphql": "^14.5.3",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-canonical-urls": "^2.0.8",
     "gatsby-plugin-favicon": "^3.1.6",
@@ -20,7 +21,7 @@
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-source-graphql": "^2.1.21",
+    "gatsby-source-graphql": "^2.1.33",
     "gatsby-transformer-sharp": "2.2.7",
     "prop-types": "^15.6.2",
     "react": "^16.11.0",
